# CSA-HW-Dedov-BSE206

./: README.md
HW1/: CMakeLists.txt  README.md  REPORT.md  animal.h  bird.h  creature.c  creature.h  data_loader.c  data_loader.h  fish.h  heap_sort.c  heap_sort.h  main.c
HW1/outputs/: output01.txt  output02.txt  output05.txt  output06.txt
HW1/tests/: test06.txt
HW2/: Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  Creature.cpp  Creature.h  CreatureArray.cpp  CreatureArray.h  Fish.cpp  Fish.h  FoodSource.h  Habitat.h  README.md  REPORT.md  main.cpp
HW2/outputs/: output01.txt  output02.txt  output03.txt  output05.txt  output06.txt  output10.txt
HW2/tests/: test02.txt  test07.txt  test09.txt
HW3/: Animal.py  Bird.py  Creature.py  Fish.py  README.md  REPORT.md  main.py  util.py
HW3/outputs/: output01.txt  output02.txt  output03.txt  output04.txt  output05.txt  output06.txt  output07.txt  output10.txt
HW3/tests/: test03.txt  test05.txt  test08.txt  test10.txt
HW4/: CMakeLists.txt  README.md  REPORT.md  forbidden_code.c  hw4.asm
HW4/outputs/: output01.txt  output02.txt  output10.txt
HW4/tests/: test01.txt  test03.txt
HW5/: CMakeLists.txt  README.md  REPORT.md  customer.cpp  customer.h  main.cpp
